// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden — container (VM-loop) > agentArgs snapshot 1`] = `
[
  "claude",
  "-p",
  "--verbose",
  "--input-format",
  "stream-json",
  "--output-format",
  "stream-json",
  "--permission-prompt-tool",
  "stdio",
  "--permission-mode",
  "default",
  "--setting-sources",
  "user",
  "--effort",
  "high",
  "--max-thinking-tokens",
  "31999",
  "--plugin-dir",
  "/sessions/local_TEST/mnt/.local-plugins/cache/my-skill",
  "--tools",
  "Task",
  "Bash",
  "Glob",
  "Grep",
  "Read",
  "Edit",
  "Write",
  "NotebookEdit",
  "WebFetch",
  "TaskCreate",
  "TaskUpdate",
  "TaskGet",
  "TaskList",
  "TaskStop",
  "WebSearch",
  "Skill",
  "REPL",
  "JavaScript",
  "AskUserQuestion",
  "ToolSearch",
  "--allowedTools",
  "Task",
  "Bash",
  "Glob",
  "Grep",
  "Read",
  "Edit",
  "Write",
  "NotebookEdit",
  "WebFetch",
  "TaskCreate",
  "TaskUpdate",
  "TaskGet",
  "TaskList",
  "TaskStop",
  "WebSearch",
  "Skill",
  "REPL",
  "JavaScript",
  "ToolSearch",
]
`;

exports[`golden — container (VM-loop) > dockerRunArgv snapshot 1`] = `
[
  "run",
  "--rm",
  "-i",
  "--platform",
  "linux/arm64",
  "--network",
  "cowork-net",
  "--cap-drop",
  "ALL",
  "--security-opt",
  "no-new-privileges",
  "--read-only",
  "--tmpfs",
  "/tmp:rw,exec,nosuid,size=1g",
  "--pids-limit",
  "1024",
  "-w",
  "/sessions/local_TEST",
  "-e",
  "CLAUDE_CODE_IS_COWORK=1",
  "-e",
  "CLAUDE_CODE_ENTRYPOINT=local-agent",
  "-e",
  "CLAUDE_CODE_TAGS=lam_session_type:chat",
  "-e",
  "CLAUDE_CODE_PROVIDER_MANAGED_BY_HOST=1",
  "-e",
  "CLAUDE_CODE_ENABLE_ASK_USER_QUESTION_TOOL=true",
  "-e",
  "CLAUDE_CODE_DISABLE_CRON=1",
  "-e",
  "CLAUDE_CODE_DISABLE_BACKGROUND_TASKS=1",
  "-e",
  "CLAUDE_CODE_DISABLE_AGENTS_FLEET=1",
  "-e",
  "CLAUDE_CODE_ENABLE_APPEND_SUBAGENT_PROMPT=1",
  "-e",
  "CLAUDE_CODE_ENABLE_TASKS=true",
  "-e",
  "CLAUDE_CODE_DISABLE_TERMINAL_TITLE=1",
  "-e",
  "ENABLE_PROMPT_CACHING_1H=1",
  "-e",
  "DISABLE_MICROCOMPACT=1",
  "-e",
  "MCP_CONNECTION_NONBLOCKING=true",
  "-e",
  "CLAUDE_CONFIG_DIR=/sessions/local_TEST/mnt/.claude",
  "-e",
  "MAX_THINKING_TOKENS=31999",
  "-e",
  "HOME=/tmp",
  "-e",
  "HTTP_PROXY=http://egress-proxy:8080",
  "-e",
  "HTTPS_PROXY=http://egress-proxy:8080",
  "-e",
  "http_proxy=http://egress-proxy:8080",
  "-e",
  "https_proxy=http://egress-proxy:8080",
  "-e",
  "CLAUDE_CODE_HOST_PLATFORM=<host-platform>",
  "-v",
  "/HOST/claude:/usr/local/bin/claude:ro",
  "-v",
  "/HOST/SESSION:/sessions/local_TEST",
  "cowork-agent-base:2",
  "claude",
  "-p",
  "--verbose",
  "--input-format",
  "stream-json",
  "--output-format",
  "stream-json",
  "--permission-prompt-tool",
  "stdio",
  "--permission-mode",
  "default",
  "--setting-sources",
  "user",
  "--effort",
  "high",
  "--max-thinking-tokens",
  "31999",
  "--plugin-dir",
  "/sessions/local_TEST/mnt/.local-plugins/cache/my-skill",
  "--tools",
  "Task",
  "Bash",
  "Glob",
  "Grep",
  "Read",
  "Edit",
  "Write",
  "NotebookEdit",
  "WebFetch",
  "TaskCreate",
  "TaskUpdate",
  "TaskGet",
  "TaskList",
  "TaskStop",
  "WebSearch",
  "Skill",
  "REPL",
  "JavaScript",
  "AskUserQuestion",
  "ToolSearch",
  "--allowedTools",
  "Task",
  "Bash",
  "Glob",
  "Grep",
  "Read",
  "Edit",
  "Write",
  "NotebookEdit",
  "WebFetch",
  "TaskCreate",
  "TaskUpdate",
  "TaskGet",
  "TaskList",
  "TaskStop",
  "WebSearch",
  "Skill",
  "REPL",
  "JavaScript",
  "ToolSearch",
]
`;

exports[`golden — container (VM-loop) > spawnEnv snapshot 1`] = `
{
  "CLAUDE_CODE_DISABLE_AGENTS_FLEET": "1",
  "CLAUDE_CODE_DISABLE_BACKGROUND_TASKS": "1",
  "CLAUDE_CODE_DISABLE_CRON": "1",
  "CLAUDE_CODE_DISABLE_TERMINAL_TITLE": "1",
  "CLAUDE_CODE_ENABLE_APPEND_SUBAGENT_PROMPT": "1",
  "CLAUDE_CODE_ENABLE_ASK_USER_QUESTION_TOOL": "true",
  "CLAUDE_CODE_ENABLE_TASKS": "true",
  "CLAUDE_CODE_ENTRYPOINT": "local-agent",
  "CLAUDE_CODE_HOST_PLATFORM": "<host-platform>",
  "CLAUDE_CODE_IS_COWORK": "1",
  "CLAUDE_CODE_PROVIDER_MANAGED_BY_HOST": "1",
  "CLAUDE_CODE_TAGS": "lam_session_type:chat",
  "CLAUDE_CONFIG_DIR": "/sessions/local_TEST/mnt/.claude",
  "DISABLE_MICROCOMPACT": "1",
  "ENABLE_PROMPT_CACHING_1H": "1",
  "HOME": "/tmp",
  "HTTPS_PROXY": "http://egress-proxy:8080",
  "HTTP_PROXY": "http://egress-proxy:8080",
  "MAX_THINKING_TOKENS": "31999",
  "MCP_CONNECTION_NONBLOCKING": "true",
  "http_proxy": "http://egress-proxy:8080",
  "https_proxy": "http://egress-proxy:8080",
}
`;

exports[`golden — control envelopes > AskUserQuestion answer envelope 1`] = `
{
  "response": {
    "request_id": "r1",
    "response": {
      "behavior": "allow",
      "updatedInput": {
        "answers": {
          "Which fruit?": "Kiwi",
        },
        "questions": [
          {
            "options": [
              {
                "label": "Mango",
              },
              {
                "label": "Kiwi",
              },
            ],
            "question": "Which fruit?",
          },
        ],
      },
    },
    "subtype": "success",
  },
  "type": "control_response",
}
`;

exports[`golden — control envelopes > tool deny envelope (strict) 1`] = `
{
  "response": {
    "request_id": "r2",
    "response": {
      "behavior": "deny",
      "message": "denied (strict, off-registry)",
    },
    "subtype": "success",
  },
  "type": "control_response",
}
`;

exports[`golden — control envelopes > workspace mcp tools/list (verbatim cowork bash description) 1`] = `
{
  "result": {
    "tools": [
      {
        "description": "Run a shell command in the session's isolated Linux workspace. Your connected folders are mounted under /sessions/local_TEST/mnt/ — the Shell access section of your system prompt lists the exact path for each folder. Each bash call is independent (no cwd/env carryover). Use absolute paths.",
        "inputSchema": {
          "properties": {
            "command": {
              "type": "string",
            },
            "timeout_ms": {
              "type": "number",
            },
          },
          "required": [
            "command",
          ],
          "type": "object",
        },
        "name": "bash",
      },
      {
        "description": "Fetch a URL from the session network (subject to the egress allowlist). web_fetch can only retrieve URLs that appeared in a user message or a prior result.",
        "inputSchema": {
          "properties": {
            "url": {
              "type": "string",
            },
          },
          "required": [
            "url",
          ],
          "type": "object",
        },
        "name": "web_fetch",
      },
    ],
  },
}
`;

exports[`golden — host-loop (deltas) > agentArgs snapshot 1`] = `
[
  "claude",
  "-p",
  "--verbose",
  "--input-format",
  "stream-json",
  "--output-format",
  "stream-json",
  "--permission-prompt-tool",
  "stdio",
  "--permission-mode",
  "default",
  "--setting-sources",
  "user",
  "--effort",
  "high",
  "--max-thinking-tokens",
  "31999",
  "--disallowedTools",
  "Bash",
  "WebFetch",
  "NotebookEdit",
  "--append-system-prompt",
  "## Shell access
...",
  "--plugin-dir",
  "/sessions/local_TEST/mnt/.local-plugins/cache/my-skill",
  "--tools",
  "Task",
  "Glob",
  "Grep",
  "Read",
  "Edit",
  "Write",
  "TaskCreate",
  "TaskUpdate",
  "TaskGet",
  "TaskList",
  "TaskStop",
  "WebSearch",
  "Skill",
  "REPL",
  "JavaScript",
  "AskUserQuestion",
  "ToolSearch",
  "mcp__workspace__bash",
  "mcp__workspace__web_fetch",
  "--allowedTools",
  "Task",
  "Glob",
  "Grep",
  "Read",
  "Edit",
  "Write",
  "TaskCreate",
  "TaskUpdate",
  "TaskGet",
  "TaskList",
  "TaskStop",
  "WebSearch",
  "Skill",
  "REPL",
  "JavaScript",
  "ToolSearch",
  "mcp__workspace__bash",
  "mcp__workspace__web_fetch",
]
`;

exports[`golden — host-loop (deltas) > dockerRunArgv snapshot (named for docker exec) 1`] = `
[
  "run",
  "--rm",
  "-i",
  "--name",
  "cowork-hl-local_TEST",
  "--platform",
  "linux/arm64",
  "--network",
  "cowork-net",
  "--cap-drop",
  "ALL",
  "--security-opt",
  "no-new-privileges",
  "--read-only",
  "--tmpfs",
  "/tmp:rw,exec,nosuid,size=1g",
  "--pids-limit",
  "1024",
  "-w",
  "/sessions/local_TEST",
  "-e",
  "CLAUDE_CODE_IS_COWORK=1",
  "-e",
  "CLAUDE_CODE_ENTRYPOINT=local-agent",
  "-e",
  "CLAUDE_CODE_TAGS=lam_session_type:chat",
  "-e",
  "CLAUDE_CODE_PROVIDER_MANAGED_BY_HOST=1",
  "-e",
  "CLAUDE_CODE_ENABLE_ASK_USER_QUESTION_TOOL=true",
  "-e",
  "CLAUDE_CODE_DISABLE_CRON=1",
  "-e",
  "CLAUDE_CODE_DISABLE_BACKGROUND_TASKS=1",
  "-e",
  "CLAUDE_CODE_DISABLE_AGENTS_FLEET=1",
  "-e",
  "CLAUDE_CODE_ENABLE_APPEND_SUBAGENT_PROMPT=1",
  "-e",
  "CLAUDE_CODE_ENABLE_TASKS=true",
  "-e",
  "CLAUDE_CODE_DISABLE_TERMINAL_TITLE=1",
  "-e",
  "ENABLE_PROMPT_CACHING_1H=1",
  "-e",
  "DISABLE_MICROCOMPACT=1",
  "-e",
  "MCP_CONNECTION_NONBLOCKING=true",
  "-e",
  "CLAUDE_CONFIG_DIR=/sessions/local_TEST/mnt/.claude",
  "-e",
  "MAX_THINKING_TOKENS=31999",
  "-e",
  "HOME=/tmp",
  "-e",
  "HTTP_PROXY=http://egress-proxy:8080",
  "-e",
  "HTTPS_PROXY=http://egress-proxy:8080",
  "-e",
  "http_proxy=http://egress-proxy:8080",
  "-e",
  "https_proxy=http://egress-proxy:8080",
  "-e",
  "CLAUDE_CODE_HOST_PLATFORM=<host-platform>",
  "-v",
  "/HOST/claude:/usr/local/bin/claude:ro",
  "-v",
  "/HOST/SESSION:/sessions/local_TEST",
  "cowork-agent-base:2",
  "claude",
  "-p",
  "--verbose",
  "--input-format",
  "stream-json",
  "--output-format",
  "stream-json",
  "--permission-prompt-tool",
  "stdio",
  "--permission-mode",
  "default",
  "--setting-sources",
  "user",
  "--effort",
  "high",
  "--max-thinking-tokens",
  "31999",
  "--disallowedTools",
  "Bash",
  "WebFetch",
  "NotebookEdit",
  "--append-system-prompt",
  "## Shell access
...",
  "--plugin-dir",
  "/sessions/local_TEST/mnt/.local-plugins/cache/my-skill",
  "--tools",
  "Task",
  "Glob",
  "Grep",
  "Read",
  "Edit",
  "Write",
  "TaskCreate",
  "TaskUpdate",
  "TaskGet",
  "TaskList",
  "TaskStop",
  "WebSearch",
  "Skill",
  "REPL",
  "JavaScript",
  "AskUserQuestion",
  "ToolSearch",
  "mcp__workspace__bash",
  "mcp__workspace__web_fetch",
  "--allowedTools",
  "Task",
  "Glob",
  "Grep",
  "Read",
  "Edit",
  "Write",
  "TaskCreate",
  "TaskUpdate",
  "TaskGet",
  "TaskList",
  "TaskStop",
  "WebSearch",
  "Skill",
  "REPL",
  "JavaScript",
  "ToolSearch",
  "mcp__workspace__bash",
  "mcp__workspace__web_fetch",
]
`;
